Set overflow to auto for head-foot css to apply to all pages, fix desc slider

--- a/resources/css/head-foot.css
+++ b/resources/css/head-foot.css
@@ -76,6 +76,7 @@ main {
     margin-top: 5vh;
     padding-left: 2vw;
     padding-right: 2vw;
+    overflow: auto;
 }
 
 footer {
